# rpl

./: .gitignore  CMakeLists.txt  PACKAGING.md  README.md  west.yml
.github/: copilot-instructions.md
.github/workflows/: amalgamate.yml  docs.yml  pack-rplc-linux.yml  pack.yml  release-rpl.yml  release-rplc.yml  sync-arduino.yml  test.yml
benchmark/: CMakeLists.txt  rpl_benchmark.cpp  rpl_benchmark_packets.hpp
benchmark/zephyr_benchmark/: prj.conf
benchmark/zephyr_benchmark/src/: main.cpp
cmake/: FindCli11.cmake  FindFmt.cmake  FindGoogleBenchmark.cmake  FindJson.cmake  FindRing-Buffer.cmake  FindRplModules.cmake  FindRplcModules.cmake  FindTl-expected.cmake  Findfmt.cmake  Findjson.cmake  RplGenerateDoc.cmake  RplPackaging.cmake  RplcPackaging.cmake  rplConfig.cmake.in
cmake/Modules/: FindCppcrc.cmake  FindFrozen.cmake  FindGoogleBenchmark.cmake  FindHySerial.cmake  FindJson.cmake  FindTl-expected.cmake
docs/: Doxyfile  PACKAGING.md  header.html  rplc-config-schema.md  wrangler-docs.toml
docs/pages/: PACKAGING.md  benchmark.md  design_document.md  integration_guide.md  mainpage.md  packaging.md  quick_start.md
include/RPL/: Deserializer.hpp  Parser.hpp  RPL.hpp  Serializer.hpp  USBTransport.hpp
include/RPL/Containers/: BipBuffer.hpp  MemoryPool.hpp  RingBuffer.hpp
include/RPL/Meta/: BitstreamParser.hpp  BitstreamSerializer.hpp  BitstreamTraits.hpp  PacketInfoCollector.hpp  PacketTraits.hpp
include/RPL/Packets/: USBAck.hpp  VT03RemotePacket.hpp
include/RPL/Packets/Custom/: TestPacket.hpp
include/RPL/Packets/RoboMaster/: Buff.h  Buff.hpp  CustomClientData.h  CustomClientData.hpp  CustomControllerData.h  CustomControllerData.hpp  CustomInfo.h  CustomInfo.hpp  CustomRobotData.h  CustomRobotData.hpp  DartClientCmd.h  DartClientCmd.hpp  DartInfo.h  DartInfo.hpp  EventData.h  EventData.hpp  GameResult.h  GameResult.hpp  GameRobotHP.h  GameRobotHP.hpp  GameStatus.h  GameStatus.hpp  GroundRobotPosition.h  GroundRobotPosition.hpp  HurtData.h  HurtData.hpp  InteractionFigure.h  InteractionFigure.hpp  InteractionLayerDelete.h  InteractionLayerDelete.hpp  InteractionString.h  InteractionString.hpp  MapCommand.h  MapCommand.hpp  MapData.h  MapData.hpp  MapRobotData.h  MapRobotData.hpp  PowerHeatData.h  PowerHeatData.hpp  (+32 more)
include/RPL/Packets/Robot/: SensorPacket.hpp
include/RPL/Packets/Sample/: SampleA.hpp  SampleB.hpp  USBSamples.hpp
include/RPL/Packets/SamplePacket/: SamplePacket.hpp
include/RPL/Utils/: AckManager.hpp  CompilerBarrier.hpp  ConnectionMonitor.hpp  Def.hpp  Error.hpp
include/rpl/: Error.hpp  Packet.hpp  Parser.hpp
samples/: CMakeLists.txt
samples/packet/: CMakeLists.txt  main.cpp
samples/packet/sample_packet/: SamplePacket.hpp
samples/real_comm/: CMakeLists.txt  main.cpp
scripts/: amalgamate.py  generate_struct_to_tuple.py  library.json  library.properties  sync_arduino.py
src/: CMakeLists.txt
src/rpl/: CMakeLists.txt  Parser.cpp
src/rplc/: CMakeLists.txt  main.cpp
src/rplc/include/: CLI.hpp  Config.hpp  FileWriter.hpp  Generator.hpp  Validator.hpp  Version.hpp
src/rplc/src/: CLI.cpp  Config.cpp  FileWriter.cpp  Generator.cpp  Validator.cpp
tests/: CMakeLists.txt  test_amalgamation.cpp
tests/deserialization/: CMakeLists.txt  test_bitstream.cpp  test_deserialization.cpp
tests/integration/: CMakeLists.txt  test_integration.cpp
tests/parser/: CMakeLists.txt  test_connection_monitor.cpp  test_mixed_protocols.cpp  test_parser.cpp  test_parser_advanced.cpp  test_parser_hooks.cpp
tests/rplc/: test_config.json  test_config_invalid.json  test_config_namespace.json
tests/serialization/: CMakeLists.txt  test_bitstream_serializer.cpp  test_mixed_protocols.cpp  test_serialization.cpp
tests/traits/: CMakeLists.txt  test_traits.cpp
tests/usb/: CMakeLists.txt  test_usb_transport.cpp
tests/zephyr_benchmark/: CMakeLists.txt  testcase.yaml
zephyr/: Kconfig  module.yml
